--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
         <a href="#">Curiosidades</a>
         <a href="#">Perfil</a>
     </nav>
+
+    <!--<div class="search-box"> 
+        <input class="search-txt" type="text" name="search" placeholder="Buscar" required>
+        <i class="fas fa-search"></i>
+    </div>-->
+
     <main>
         <h1>Titulos</h1>
         <section>
@@ -33,7 +39,7 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias eius mollitia tempore pariatur illo officiis laborum dignissimos ratione. Delectus provident officiis earum quasi. Temporibus reiciendis quaerat, facilis sint natus quia hic excepturi ea, ab, nostrum vitae accusantium. Incidunt hic accusantium sunt esse eum id nobis, fugiat enim quibusdam neque adipisci facere dolor eaque ipsam facilis quo culpa cumque nihil laborum mollitia quia dignissimos minima sint tempore? Repellendus dolor sint laborum harum optio eligendi mollitia, corporis, libero consectetur quaerat accusantium nisi. Doloribus excepturi blanditiis cupiditate laudantium quas eveniet corrupti ab, perferendis sequi sunt nulla natus obcaecati enim rem inventore amet et pariatur libero dolor impedit. Placeat minima error repellendus nisi nam doloribus quisquam voluptate, est laborum expedita adipisci quasi illum alias nemo dignissimos. Quam molestiae sit distinctio facere tempora architecto alias. Perspiciatis voluptatum rem vero illum eos culpa, reprehenderit quia vitae cum explicabo? Ratione obcaecati aperiam debitis fuga nam minus blanditiis itaque repellendus voluptate voluptatum quo repellat, temporibus excepturi deleniti est fugit quasi maxime possimus veniam laborum voluptates, expedita vero doloribus. Rerum pariatur illo velit commodi? Reprehenderit aspernatur cum modi dolorum omnis iure aperiam tenetur molestias odit fugiat doloribus recusandae asperiores est laborum ad quasi, nobis perspiciatis animi nisi. Provident, numquam.</p>
         </section>
     </main>
-    <section class="topo"><p><a href="index.html" target="_top">Topo</a></p></section>
+    <section class="topo"><p><a href="index.html" target="_top"><abbr title="Voltar ao Início">Topo</abbr></a></p></section>
     <footer>
         <p>Desenvolvido por <a href="https://github.com/gabriel-on" target="_blank">Gabriel ON</a>.</p>
         <aside>
